# uncertainty

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/: laplace-approximation.ipynb  monte-carlo-dropout.ipynb  visualisations.ipynb
