[tool.poetry]
name = "uncertainty"
version = "0.1.0"
description = ""
authors = ["harrisonpim <hello@harrisonpim.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
torch = "^2.2.2"
scipy = "^1.12.0"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
